other-vpol/limit-containers-per-pod/.kyverno-test/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-1
  labels:
    app: myapp
spec:
  containers:
  - name: nginx
    image: nginx:latest

---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-2
  labels:
    app: myapp
spec:
  containers:
  - name: nginx1
    image: nginx:latest
  - name: nginx2
    image: nginx:latest
  - name: nginx3
    image: nginx:latest
  - name: nginx4
    image: nginx:latest
  - name: nginx5
    image: nginx:latest

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80

---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: mycronjob
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          containers:
          - name: hello1
            image: busybox
          - name: hello2
            image: busybox
          - name: hello3
            image: busybox
          - name: hello4
            image: busybox
          - name: hello5
            image: busybox
          restartPolicy: OnFailure
